		Does now respond again to external semafore's mailout, mailin
		and scanout in the semafore directory.
		Removes stale socket file if found.

	mbpasswd:
		Added CLOSE_SESSIONS and ENV_ROOTPATH to getdef to prevent new
		user error messages on some distributions.
		Ported to work on FreeBSD.

	mbindex:
		Patched by Ken Bowley to prevent a crash when the 300 baud 
		field is the last item on the nodelist line.

	mbmon:
		Changed the rawio to termios style instead of termio.
		Shows the OS name in the info screen.

	mbsetup:
		Shows the OS name in the info screen.
		Creates default tty records with tty names for the right
		OS (I hope).
		Fixed a bug in the menu editor, deleted menus were not really
		deleted.
		Added setup items for the menu Display colors.
		Added a no suid switch to the menu for doors.
		Added setup for *.msg directory in menu 1.3.

	mbcico:
		Renamed sendfile function in zmsend.c to sendzfile to prevent a
		conflict with an excisting library call on FreeBSD.
		Removed some debug logmessages.
		The filerquest response message doesn't use the tmpnam function
		anymore, this was the last one of the unsafe tmpnam calls.

	mball:
		Removed some compiler warnings on some systems.

	mbsebbs:
		Removed some compiler warnings on some systems.
		Added menu Display lines.
		Added menu item 21, display text only.
		When a user has no download files limit and no download Kbytes
		limit he may download unlimited.
		When a user has no timelimit set in the limits, he will get
		a 24 hours session limit.
		The written door.sys file now has EOF character at the end.
		The written door.sys file now has a : after the comport.
		Executing doors in nosuid mode (as real user) is now possible.
		The can be switched on using mbsetup.
		Fixed security problem in Unix username and password entry.

	mbuseradd:
		Ported to work on FreeBSD.

	mbpasswd:
		Ported to work on FreeBSD.

	htmldoc:
		Upgraded the FTSC documents to the current state.

